--- a/frontend1/package.json
+++ b/frontend1/package.json
@@ -13,6 +13,7 @@
     "@gsap/react": "^2.1.2",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
+    "axios": "^1.13.1",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "jsbarcode": "^3.12.1",
